--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,27 @@
-body{
-  background-color: black;
-    
+html {
+    min-height: 100%;
+    position: relative;
 }
+body {
+    margin: 0;
+    margin-bottom: -5px;
+}
+*{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+
 nav{
     padding-top: 10px;
     width: 100%;
     height: 40px;
-    background-color: rgba(255, 255, 255, 0.281);
+    background-color:#ce0808d2;
     list-style: none;
     display: inline-flex;
     justify-content: center;
+    text-align: center;
+    justify-items: center;
 
 
 }
@@ -22,10 +34,8 @@ nav li{
     font-family: 'Roboto', sans-serif;
     font-size: 18;
     font-weight: 500;
-
-
+    letter-spacing: 2px;
 }
-
 nav li a{
     text-decoration: none;
     color: white;
@@ -33,23 +43,72 @@ nav li a{
     justify-content: center;
 
 }
-#home{
-    height:85dvh;
+#contenido .logo{
+    height:24dvh;
     width: auto;
     margin: 0px;
     padding: 0px;
+    text-align: center;
+    text-align: -webkit-center;
 }
-#home img{
-    height:100%;
-    width:100%; 
+#contenido .logo img{
+    height:auto;
+    width: 300px; 
+    padding-top: 100px;
+   
+}
+#contenido .carrusel{
+    height: 65dvh;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    text-align: -webkit-center;
+}
+
+#contenido .carrusel .fondo{
+ 
+    margin-top: 10%;
+    background-image: url("../imagenes/textura.png");
+    width: 100%;
+    height: 30%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#contenido .carrusel .fondo div{
+    margin: 5%;
+    width: 386px;
+    height: 266px;
+    border-radius: 20px;
+    border: solid 1px rgba(155, 151, 151, 0.301);
+    background-color: #ffffff;
+    box-shadow: 5px 14px 13px -1px rgba(0,0,0,0.18);
+    -webkit-box-shadow: 5px 14px 13px -1px rgba(0,0,0,0.18);
+    -moz-box-shadow: 5px 14px 13px -1px rgba(0,0,0,0.18);
+    align-items: center;
+    
+}
+#contenido .carrusel .fondo div img{
+    margin-top: 3.5%;
+    width: 90%;
+    height: 90%; 
+    border-radius: 20px;
+
 }
 footer{
-    height: 5dvh;
-    width: auto;
     display:flex;
-    background-color: rgba(255, 255, 255, 0.11);
+    background-color: #ce0808d2;
     text-align: center;
     justify-content: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    margin-bottom: 0;
+    left:0px;
     
 }
 footer img{
@@ -60,9 +119,9 @@ footer img{
 
 }
 footer .parrafo{
-    font-size: 20px;
+    font-size: 15px;
     color: white;
-    margin-top: -0.5%;
+    margin-top: 15px;
 
 }
 
