--- a/css/style2.css
+++ b/css/style2.css
@@ -1,15 +1,27 @@
-body{
-    background-color: black;
-
+html {
+    min-height: 100%;
+    position: relative;
+}
+body {
+    margin: 0;
+    margin-bottom: 40px;
+}
+*{
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 nav{
     padding-top: 10px;
     width: 100%;
     height: 40px;
-    background-color: rgba(255, 255, 255, 0.281);
+    background-color: #ce0808d2;
     list-style: none;
     display: inline-flex;
     justify-content: center;
+    position:fixed;
+    text-align: center;
+    justify-items: center;
 }
 nav li{
     padding-top: 5px;
@@ -19,6 +31,7 @@ nav li{
     font-family: 'Roboto', sans-serif;
     font-size: 18;
     font-weight: 500;
+    letter-spacing: 2px;
 }
 
 nav li a{
@@ -35,47 +48,115 @@ hr{
 }
 .ventas{
     width:100%;
-    height:70dvh;
-    background-color: green;
-    display: flex;
+    height:55dvh;
+    text-align: -webkit-center;
+}
+#logo{
+    width: 100%;
+    height: 200px;
     justify-content: center;
-    
+    text-align: -webkit-center;
+}
+#logo img{
+    width: auto;
+    height: 70px;
+    padding-top: 80px;
 }
 .moderno{
     width:100%;
-    height:50dvh;
-    background-color: rgb(128, 0, 79);
-    padding-top: 10px;
-    display: flex;
+    height:60dvh;
+    display:block;
     justify-content: center;
+    text-align: -webkit-center;
 }
+
+.titular{
+    width: 100%;
+    height:80px;
+    background-image: url("../imagenes/fondoletras.png");
+    text-align: -webkit-center;
+}
+.titular h4{
+    margin-left: 250px;
+    display: inline-block;
+}
+
+.titular .porcentaje{
+float: right;
+}
+
+.porcentaje{
+    width: 250px;
+    height:120px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background-color: #FA7C07;
+}
+
+h5{
+    margin-top: 15px;
+    font-size: 80px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    letter-spacing: 2px;
+}
+
 .tradicional{
     width:100%;
-    height:50dvh;
-    background-color: rgb(0, 30, 128);
-    padding-top: 10px;
-    display: flex;
+    height:60dvh;
     justify-content: center;
+    justify-content: center;
+    text-align: -webkit-center;
 }
 .institucional{
     width:100%;
-    height:50dvh;
-    background-color: rgb(109, 128, 0);
-    padding-top: 10px;
-    display: flex;
+    height:60dvh;
     justify-content: center;
+    text-align: -webkit-center;
+
+}
+
+.valores{
+    margin-top: 170px;
+    width: 50%;
+    height: 130px;
+    border:2px solid rgba(0, 0, 0, 0.199);
+    border-radius: 20px;
+    box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    -moz-box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    text-align: center;
+    justify-content: center;
+    text-align: -webkit-center;
+
+}
+
+.totalvalores{
+    margin-top: 125px;
+    width: 65%;
+    height: 160px;
+    border:2px solid rgba(0, 0, 0, 0.199);
+    border-radius: 20px;
+    box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    -webkit-box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    -moz-box-shadow: 12px 10px 18px 0px rgba(0,0,0,0.22);
+    text-align: center;
+    justify-content: center;
+    text-align: -webkit-center;
+
 }
 
 footer{
-    height: 5dvh;
-    width: auto;
     display:flex;
-    background-color: rgba(255, 255, 255, 0.11);
+    background-color: #ce0808d2;
     text-align: center;
     justify-content: center;
-    padding-top: 10px;
-    
-    
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    margin-bottom: 0;
+    left:0px;
 }
 footer img{
     height: 30px;
@@ -85,9 +166,10 @@ footer img{
 
 }
 footer .parrafo{
-    font-size: 20px;
+    font-size: 15px;
     color: white;
-    margin-top: -0.5%;
+    margin-top: 15px;
+
 
 }
 
@@ -98,25 +180,49 @@ footer .redes{
 }
 .vsubtotal
 {  
+    margin-top: 15px;
     width: 100%;
     height: 100%;
-    color: blue;
+    color: #17171ab9;
+    font-weight:700;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 3px;
     text-align: center;
-    font-size: 120px;
+    font-size: 90px;
     justify-content: center;
+    text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.301);
 }
-.titular{
-    padding-top:px;
+
+.vtotal
+{  
+    margin-top: -5px;
     width: 100%;
-    height:10%;
-    background-color: blueviolet;
-    background-image: url(/fondoletras.png);
+    height: 100%;
+    color: #17171ab9;
+    font-weight:700;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 3px;
     text-align: center;
+    font-size: 150px;
     justify-content: center;
-    display: block;
+    text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.301);
 }
 
-.titular H4{
-    font-size: 50px;
+H3{
+    padding-top: 15px;
+    height: 80%;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    letter-spacing: 2px;
+}
 
+
+H4{
+    margin-top: 20px;
+    height: 80%;
+    font-size: 40px;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    letter-spacing: 2px;
 }
