--- a/css/style2.css
+++ b/css/style2.css
@@ -143,6 +143,7 @@ h5{
     text-align: center;
     justify-content: center;
     text-align: -webkit-center;
+    align-items: center;
 
 }
 
@@ -225,4 +226,130 @@ H4{
     font-family: 'Montserrat', sans-serif;
     color: white;
     letter-spacing: 2px;
+}
+@media   (max-width: 1500px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 20px;
+    padding-right: 100px;
+    font-size: 15;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 60%;
+        margin-top: 0.5%;
+    }
+    .vtotal{
+        margin-top: 3%;
+        font-size: 90px;
+    }
+    .vsubtotal{
+        font-size: 60px;
+        margin-top: 5%;
+    }
+}
+@media   (max-width: 1050px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 40%;
+        margin-top: 0.1%;
+    }
+    
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;   
+    }
+    .titular h4{
+    margin-left: 50px;
+    display: inline-block;  
+    }   
+}
+
+@media   (max-width: 900px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 40%;
+        margin-top: 0.1%;
+    }
+    
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;   
+    }
+    .titular h4{
+    margin-left: 10px;
+    display: inline-block;  
+    } 
+    .vtotal{
+        margin-top: 6%;
+        font-size: 70px;
+    }
+    .vsubtotal{
+        font-size: 50px;
+        margin-top: 8%;
+    }  
+}
+@media   (max-width: 700px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 20%;
+        margin-top: 0.1%;
+    }
+    
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;   
+    }
+    .titular h4{
+    margin-left: 10px;
+    display: inline-block;  
+    } 
+    .vtotal{
+        margin-top: 12%;
+        font-size: 45px;
+    }
+    .vsubtotal{
+        font-size: 30px;
+        margin-top: 15%;
+    }  
+    .titular{
+        height:120px;
+        
 }
