--- a/css/style3.css
+++ b/css/style3.css
@@ -119,7 +119,7 @@ H3{
     
 }
 #categorias .contenedor_categoria .imagen_categoria img{
-    width: 100%;
+    width: absolute;
     height: 100%;
     background-size: contain;
     background-position: center;
@@ -186,4 +186,97 @@ footer .redes{
     justify-content: center;
     padding-left: 72%;
     margin-top: 0.5%;
+}
+@media   (max-width: 1420px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 20px;
+    padding-right: 100px;
+    font-size: 15;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 60%;
+        margin-top: 0.5%;
+    }
+}
+@media   (max-width: 1000px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 40%;
+        margin-top: 0.1%;
+    } 
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;
+    } 
+    #categorias .contenedor_categoria h4{
+        font-size: 25px;
+    }
+    .porcentaje{
+        font-size: 50px; 
+    }
+    #categorias .contenedor_categoria .contenido_porcentaje{
+    
+        margin-left:auto; margin-right:60px;
+        margin-top: 15%;
+    }
+}   
+
+@media   (max-width: 600px)  {
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 20%;
+        margin-top: 0.1%;
+    } 
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;
+    } 
+    #categorias .contenedor_categoria h4{
+        font-size: 20px;
+    }
+    .porcentaje{
+        margin-top: 50%;
+        font-size: 30px; 
+    }
+    #categorias .contenedor_categoria .contenido_porcentaje{
+    
+        margin-left:auto; margin-right:60px;
+        margin-top: 20%;
+    }
+    #categorias .contenedor_categoria{
+        width: 70%;
+        height: 100px;
+        margin-top: 20px;
+    }  
+    .titular{
+        width: 100%;
+        height:100px;
+    }
 }
