--- a/css/style4.css
+++ b/css/style4.css
@@ -80,3 +80,56 @@ footer .redes{
     padding-left: 72%;
     margin-top: 0.5%;
 }
+@media   (max-width: 1420px)  {
+    #contenido .carrusel .fondo div{
+        margin: 1%;
+    }
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 20px;
+    padding-right: 100px;
+    font-size: 15;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 60%;
+        margin-top: 0.5%;
+    }
+}
+@media   (max-width: 900px)  {
+    #contenido .carrusel .fondo div{
+        margin: 1%;
+    }
+    
+    nav li{ 
+    padding-top: 2px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+    font-size: 15px;
+    margin-right: 45px;
+    }
+    footer .redes{
+        justify-content: center;
+        padding-left: 40%;
+        margin-top: 0.1%;
+    }
+    #contenido .carrusel .fondo div{
+    margin:2px;
+    width: 256px;
+    height: 216px; 
+    
+    }
+    #contenido .carrusel .fondo {
+    display: inline-block;  
+    background-image: none; 
+    } 
+    html {
+    min-height: 100%;
+    position: relative;
+    }
+    nav{
+    height: 60px;
+} 
+}
