--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ nav li a{
     justify-content: center;
 
 }
+/*contenedor del logo polimes*/
 #contenido .logo{
     height:24dvh;
     width: auto;
@@ -51,6 +52,7 @@ nav li a{
     text-align: center;
     text-align: -webkit-center;
 }
+/*propiedades de la imagen de polimes*/
 #contenido .logo img{
     height:auto;
     width: 300px; 
@@ -64,7 +66,7 @@ nav li a{
     text-align: center;
     text-align: -webkit-center;
 }
-
+/*contenedor de la linea delgada de fondo del carrusal de imagenes */
 #contenido .carrusel .fondo{
 
     margin-top: 10%;
@@ -78,6 +80,7 @@ nav li a{
     align-items: center;
     justify-content: center;
 }
+/*contenedor de las imagenes del carrusal */
 #contenido .carrusel .fondo div{
     margin: 5%;
     width: 386px;
@@ -91,6 +94,7 @@ nav li a{
     align-items: center;
     
 }
+/*propiedades de las imagenes de polimes del carrusel*/
 #contenido .carrusel .fondo div img{
     margin-top: 3.5%;
     width: 90%;
@@ -111,6 +115,7 @@ footer{
     left:0px;
     
 }
+/*propiedades de las redes sociales*/
 footer img{
     height: 30px;
     width: auto; 
@@ -128,6 +133,7 @@ footer .redes{
     padding-left: 72%;
     margin-top: 0.5%;
 }
+/*responsive desing de la pagina*/
 @media   (max-width: 1420px)  {
     #contenido .carrusel .fondo div{
         margin: 1%;
