--- a/css/style2.css
+++ b/css/style2.css
@@ -46,11 +46,13 @@ hr{
     width: 90%;
     margin: auto;
 }
+/*contenedor de las ventas generales de la empresa*/
 .ventas{
     width:100%;
     height:55dvh;
     text-align: -webkit-center;
 }
+/*propiedades del contenedor logo de polimes*/
 #logo{
     width: 100%;
     height: 200px;
@@ -69,7 +71,7 @@ hr{
     justify-content: center;
     text-align: -webkit-center;
 }
-
+/*fondo de formas rojas */
 .titular{
     width: 100%;
     height:80px;
@@ -84,7 +86,7 @@ hr{
 .titular .porcentaje{
 float: right;
 }
-
+/*contenedor de porcentaje de ventas*/
 .porcentaje{
     width: 250px;
     height:120px;
@@ -100,7 +102,7 @@ h5{
     color: white;
     letter-spacing: 2px;
 }
-
+/*contenedor del canal tradicional*/
 .tradicional{
     width:100%;
     height:60dvh;
@@ -108,6 +110,7 @@ h5{
     justify-content: center;
     text-align: -webkit-center;
 }
+/*contenedor del canal institucional*/
 .institucional{
     width:100%;
     height:60dvh;
@@ -115,7 +118,7 @@ h5{
     text-align: -webkit-center;
 
 }
-
+/*contenedor de valor de las ventas principales */
 .valores{
     margin-top: 170px;
     width: 50%;
@@ -130,7 +133,7 @@ h5{
     text-align: -webkit-center;
 
 }
-
+/*contenedor de las ventas de los canales */
 .totalvalores{
     margin-top: 125px;
     width: 65%;
@@ -179,6 +182,7 @@ footer .redes{
     padding-left: 72%;
     margin-top: 0.5%;
 }
+/*valores de los canales de ventas */
 .vsubtotal
 {  
     margin-top: 15px;
@@ -193,7 +197,7 @@ footer .redes{
     justify-content: center;
     text-shadow: 3px 4px 4px rgba(0, 0, 0, 0.301);
 }
-
+/*valor de las ventas totales*/
 .vtotal
 {  
     margin-top: -5px;
@@ -352,4 +356,5 @@ H4{
     .titular{
         height:120px;
         
+}
 }
